@@ -11,9 +11,11 @@ decreaseFontSize()
 {
 	FONT_SIZE = "view.fontsize";
 	GUTTER_FONT_SIZE = "view.gutter.fontsize";
-	size = jEdit.getIntegerProperty(FONT_SIZE,12) + 1;
+	CONSOLE_FONT_SIZE = "console.fontsize";
+	size = jEdit.getIntegerProperty(FONT_SIZE,12) - 1;
 	jEdit.setIntegerProperty(FONT_SIZE,size);
 	jEdit.setIntegerProperty(GUTTER_FONT_SIZE,size);
+	jEdit.setIntegerProperty(CONSOLE_FONT_SIZE,size);
 	jEdit.propertiesChanged();
 	jEdit.saveSettings();
 	view.getStatus().setMessageAndClear("Font size now " + size);
