@@ -842,6 +842,7 @@ about.version=jEdit version {0}
 about.text=jEdit is brought to you by\n\
 	\ \n\
 	Slava Pestov\n\
+	Aaron Bell\n\
 	Alessandro Falappa\n\
 	Alex Levin\n\
 	Alexander Maryanovsky\n\
